# PixelEngine

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: CopyRuntimeDlls.cmake
engine/assets/: AssetManager.cpp  AssetManager.h
engine/core/: Engine.cpp  Engine.h  EngineContext.h  GameState.h  Time.cpp  Time.h
engine/core/states/: BootState.cpp  BootState.h  RunningState.cpp  RunningState.h  ShutDownState.cpp  ShutDownState.h  States.h
engine/entity/: Entity.h  Transform.h
engine/input/: InputManager.cpp  InputManager.h
engine/renderer/: Camera.h  Renderer.cpp  Renderer.h  Sprite.h  TextureManager.cpp  TextureManager.h
engine/world/: Tilemap.cpp  Tilemap.h  Tileset.h
game/: main.cpp
game/assets/tilemaps/testmap/: test-tilemap.tmj
